[서울]AVR_LED_인터럽트추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
 
 .DS_Store
+
+서울/AVR/2020/Debug/Exe/led.elf
+
+서울/AVR/2020/Debug/Exe/led.hex
+
+서울/AVR/2020/Debug/Exe/led.rom
+
+서울/AVR/2020/Debug/led.cof
+
+서울/AVR/2020/Debug/led.obj
+
+서울/AVR/2020/Debug/led.str1
+
+서울/AVR/2020/Debug/led.sym1
+
+서울/AVR/2020/Debug/led.sym2
+
+서울/AVR/2020/Debug/led.sym3
+
+서울/AVR/2020/Debug/Link/ctype.ol
+
+서울/AVR/2020/Debug/Link/led.a
+
+서울/AVR/2020/Debug/Link/led.o
+
+서울/AVR/2020/Debug/Link/stdio.ol
+
+서울/AVR/2020/Debug/Link/string.ol
+
+서울/AVR/2020/Debug/List/led.asm
+
+서울/AVR/2020/Debug/List/led.lst
+
+서울/AVR/2020/Debug/List/led.map
